# Claude-Code-Usage-Monitoring

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  commitlint.config.mjs  eslint.config.mjs  package-lock.json  package.json  release-please-config.json
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: claude-review.yml  commitlint.yml  pr-checks.yml  release-please.yml  release.yml
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  platform.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/models/: credentials.rs  mod.rs  usage.rs
src-tauri/src/services/: anthropic_api.rs  credential_store.rs  mod.rs  settings_store.rs
src/components/Dashboard/: Dashboard.tsx
src/components/LoginRequired/: LoginRequired.tsx  index.ts
src/components/LoginScreen/: LoginScreen.tsx
src/components/OnboardingWizard/: AccountConnectionStep.tsx  LayoutSettingsStep.tsx  OnboardingWizard.tsx  ShortcutStep.tsx  StepIndicator.tsx  index.ts
src/components/Overlay/: Overlay.tsx
src/components/ShortcutSettings/: ShortcutSettings.tsx
src/components/TitleBar/: TitleBar.tsx
src/components/UsageCard/: UsageCard.tsx
src/hooks/: useAuth.ts  useKeyCapture.ts  useSettings.ts  useUsageData.ts
src/services/: tauri-commands.ts  types.ts
src/styles/: globals.css
src/utils/: colors.ts  formatters.ts
